Docker base imajını Alpine 3.19 olarak güncelle - multi-arch desteği için

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
-            BUILD_FROM=ghcr.io/home-assistant/base:latest
+            BUILD_FROM=alpine:3.19
 
   addon-build:
     runs-on: ubuntu-latest
